# RosAtomTestUtility

./: CMakeCache.txt  CMakeLists.txt  GCI.cpp  GCI.h  IUtility.h  Makefile  README.md  RSXXX_FTDI_Serial.cpp  RSXXX_FTDI_Serial.h  Utility.cpp  cmake_install.cmake  main.cpp  spi.h  spl_test.cpp  test.cpp
include/: core.h  socket.h  utils.h
source/: isocket.cpp  usocket.cpp  utils.cpp
